bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:7: error: ';' expected but 'true' found.
    reutrn true
           ^