bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if(aSmile && bSmile){
    return true
  }
  if(!aSmile && !bSmile){
    reutrn true
  }
  else{
    return false
  }
}